<resources>
    <string name="app_name">Reversi</string>
    <string name="app_lang">🇬🇧 English</string>
    <string name="camera_capture">📷 Capture</string>
    <string name="camera_back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_local">📍 Local</string>
    <string name="home_online">🌍 Online</string>
    <string name="home_settings">⚙️ Settings</string>
    <string name="home_about">ℹ️ About</string>
    <string name="app_exit">🚪 Exit</string>
    <string name="app_permissions_msg">Not all permissions were granted. Shutting down…</string>
    <string name="permissions_request_btn">Request for permissions</string>
    <string name="settings_profile">👨 Profile‍</string>
    <string name="settings_lang">Language</string>
    <string name="profile_name">Username</string>
    <string name="profile_copyID">📋 Copy my ID</string>
    <string name="game_bomb">💣 Bomb</string>
    <string name="game_switch">⇄ Switch</string>
    <string name="game_player2_name">Player 2</string>
    <string name="app_back">⬅ Return</string>
    <string name="game_end_title">Game is Over!</string>
    <string name="game_end_msg">Returning to Main Menu...</string>
    <string name="play_as_server">👩🏻‍💻 Play as Server</string>
    <string name="play_as_client">👦🏻 Play as Client</string>
</resources>