<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <Button
            android:id="@+id/home_btn_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_local" />

        <Button
            android:id="@+id/home_btn_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_online" />

        <Button
            android:id="@+id/home_btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_settings" />

        <Button
            android:id="@+id/home_btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="64dp"
            android:text="@string/home_about" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>